# agentbox

./: .env.example  .gitignore  README.md  agent.py  geospatial_map.html  gradio_page.html  helper.py  main.py  mem.md  plan.md  plans_1.md  prompt.md  pyproject.toml  requirements.txt  research.md
.agent/metrics/: metrics_20260109_141039.json
.agent_memory/: index.md
.agent_memory/long_term/: knowledge.md  learnings.md
.agent_memory/short_term/: buffer.md
calculator/: calculator.html  index.html
lib/: __init__.py  coding_agent.py  llm_client.py  model_config.py  prompts.py  sandbox.py  tools.py  tools_schemas.py  ui.py  utils.py
lib/hooks/: __init__.py  manager.py  types.py
lib/memory/: __init__.py  hooks.py  integration.py  manager.py  session.py
lib/memory/persistence/: __init__.py  checkpoint.py  markdown_store.py
lib/memory/types/: __init__.py  base.py  long_term.py  short_term.py
tests/: test_hooks.py  test_hooks_integration.py  test_memory_hooks.py
